--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,6 +27,10 @@
                 <input type="password" id="password" name="password" class="form-control" placeholder="Password"
                     required>
             </p>
+            <p>
+                <label for="remember-me" class="sr-only">Remember me?</label>
+                <input type="checkbox" id="remember-me" name="remember-me" class="form-control">
+            </p>
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         </form>
     </div>
